==> sergz72/usblib/usb_device_stm32f.cpp <==
#include "board.h"
#include <usb_device_stm32f.h>
#include <cstring>
#include "delay_systick.h"
#include <nvic.h>
#include <cstdlib>
#define USBx_DEVICE(instance)     ((USB_OTG_DeviceTypeDef *)((unsigned int)instance + USB_OTG_DEVICE_BASE))
#define USBx_INEP(instance, i)    ((USB_OTG_INEndpointTypeDef *)((unsigned int)instance + USB_OTG_IN_ENDPOINT_BASE + (i)*USB_OTG_EP_REG_SIZE))
#define USBx_OUTEP(instance, i)   ((USB_OTG_OUTEndpointTypeDef *)((unsigned int)instance + USB_OTG_OUT_ENDPOINT_BASE + (i)*USB_OTG_EP_REG_SIZE))
#define USBx_PCGCCTL(instance)    *(__IO unsigned int*)((unsigned int)instance + USB_OTG_PCGCCTL_BASE)
#define USBx_DFIFO(instance, i)   *(__IO unsigned int*)((unsigned int)instance + USB_OTG_FIFO_BASE + (i) * USB_OTG_FIFO_SIZE)
#define DCFG_FRAME_INTERVAL_80                 0U
#define DCFG_FRAME_INTERVAL_85                 1U
#define DCFG_FRAME_INTERVAL_90                 2U
#define DCFG_FRAME_INTERVAL_95                 3U
#define USB_OTG_SPEED_HIGH                     0U
#define USB_OTG_SPEED_HIGH_IN_FULL             1U
#define USB_OTG_SPEED_LOW                      2U
#define USB_OTG_SPEED_FULL                     3U
#define DSTS_ENUMSPD_HS_PHY_30MHZ_OR_60MHZ     (0 << 1)
#define DSTS_ENUMSPD_FS_PHY_30MHZ_OR_60MHZ     (1 << 1)
#define DSTS_ENUMSPD_LS_PHY_6MHZ               (2 << 1)
#define DSTS_ENUMSPD_FS_PHY_48MHZ              (3 << 1)
#define USB_MASK_INTERRUPT(instance, __INTERRUPT__)     (instance->GINTMSK &= ~(__INTERRUPT__))

void USB_Device_STM32F::AssignEndpointsBuffers()
{
  for (unsigned int i = 0; i <= USB_MAX_ENDPOINTS; i++)
  {
    unsigned int max_transfer_size = manager->GetEndpointMaxTransferSize(i);
    if (max_transfer_size)
      endpoint_buffers_rx[i] = (unsigned char *)malloc(max_transfer_size);
  }
}

void USB_Device_STM32F::Init(USB_DeviceManager *m)
{
  manager = m;

  // disable global interrupt
  instance->GAHBCFG &= ~USB_OTG_GAHBCFG_GINT;

  USB_CoreInit();

  // Set device mode
  instance->GUSBCFG |= USB_OTG_GUSBCFG_FDMOD;
  delayms(50);

  USB_EPInit();
  USB_DevInit();

  //AssignEndpointsBuffers();
  USB_FIFO_Init();
}

void USB_Device_STM32F::Reset()
{
  SetAddress(0);
  InitXferBuffers();
}

void USB_Device_STM32F::Connect()
{
  if (instance == USB_OTG_FS)
    NVIC_Init(OTG_FS_IRQn, 1, 3, ENABLE);
#ifdef USB_OTG_HS
  else
    NVIC_Init(OTG_HS_IRQn, 1, 3, ENABLE);
#endif
  //Enables the controller's Global Int in the AHB Config reg
  instance->GAHBCFG |= USB_OTG_GAHBCFG_GINT;

  USBx_DEVICE(instance)->DCTL &= ~USB_OTG_DCTL_SDIS;
  //delayms(3);
}

void USB_Device_STM32F::SetEndpointTransferType(unsigned int endpoint, USBEndpointTransferType transfer_type)
{
  unsigned int value_in = USBx_INEP(instance, endpoint)->DIEPCTL & ~USB_OTG_DIEPCTL_EPTYP;
  unsigned int value_out = USBx_OUTEP(instance, endpoint)->DOEPCTL & ~USB_OTG_DOEPCTL_EPTYP;
  unsigned int ttype = transfer_type << 18;
  USBx_INEP(instance, endpoint)->DIEPCTL = value_in | ttype;
  USBx_OUTEP(instance, endpoint)->DOEPCTL = value_out | ttype;
}

void USB_Device_STM32F::ConfigureEndpointRX(unsigned int endpoint_no, USBEndpointConfiguration config)
{
  unsigned int value = USBx_INEP(instance, endpoint_no)->DIEPCTL & ~USB_OTG_DIEPCTL_STALL;
  switch (config)
  {
    case usb_endpoint_configuration_enabled: value |= USB_OTG_DIEPCTL_CNAK | USB_OTG_DIEPCTL_EPENA; break;
    case usb_endpoint_configuration_nak: value |= USB_OTG_DIEPCTL_SNAK | USB_OTG_DIEPCTL_EPENA; break;
    case usb_endpoint_configuration_stall: value |= USB_OTG_DIEPCTL_STALL | USB_OTG_DIEPCTL_EPENA; break;
    default: value |= USB_OTG_DIEPCTL_EPDIS; break;
  }
  USBx_INEP(instance, endpoint_no)->DIEPCTL = value;
}

void USB_Device_STM32F::ConfigureEndpointTX(unsigned int endpoint_no, USBEndpointConfiguration config)
{
  unsigned int value = USBx_OUTEP(instance, endpoint_no)->DOEPCTL & ~USB_OTG_DOEPCTL_STALL;
  switch (config)
  {
    case usb_endpoint_configuration_enabled: value |= USB_OTG_DOEPCTL_CNAK | USB_OTG_DOEPCTL_EPENA; break;
    case usb_endpoint_configuration_nak: value |= USB_OTG_DOEPCTL_SNAK | USB_OTG_DOEPCTL_EPENA; break;
    case usb_endpoint_configuration_stall: value |= USB_OTG_DOEPCTL_STALL | USB_OTG_DOEPCTL_EPENA; break;
    default: value |= USB_OTG_DOEPCTL_EPDIS; break;
  }
  USBx_OUTEP(instance, endpoint_no)->DOEPCTL = value;
}

void USB_Device_STM32F::SetEndpointData(unsigned int endpoint_no, const void *data, unsigned int length)
{
  unsigned int temp = USBx_INEP(instance, endpoint_no)->DIEPTSIZ & ~(USB_OTG_DIEPTSIZ_PKTCNT | USB_OTG_DIEPTSIZ_XFRSIZ);
  USBx_INEP(instance, endpoint_no)->DIEPTSIZ = temp | (1 << 19) | length;
  USB_WritePacket(instance, (const unsigned char *)data, endpoint_no, length);
  ConfigureEndpointTX(endpoint_no, usb_endpoint_configuration_enabled);
}

void USB_Device_STM32F::ZeroTransfer(unsigned int endpoint_no)
{
  unsigned int temp = USBx_INEP(instance, endpoint_no)->DIEPTSIZ & ~(USB_OTG_DIEPTSIZ_PKTCNT | USB_OTG_DIEPTSIZ_XFRSIZ);
  USBx_INEP(instance, endpoint_no)->DIEPTSIZ = temp | (1 << 19);
  ConfigureEndpointTX(endpoint_no, usb_endpoint_configuration_enabled);
}

void USB_Device_STM32F::InterruptHandler()
{
  unsigned int status = instance->GINTSTS;
  status &= instance->GINTMSK;

  if (status & USB_OTG_GINTSTS_RXFLVL)
  {
    USB_MASK_INTERRUPT(instance, USB_OTG_GINTSTS_RXFLVL);

    unsigned int temp = instance->GRXSTSP;
    unsigned int length = (temp & USB_OTG_GRXSTSP_BCNT) >> 4;

    if (length)
    {
      unsigned int ep_no = temp & USB_OTG_GRXSTSP_EPNUM;
      USB_ReadPacket(instance, xfer_data[ep_no].pointer, length);
      xfer_data[ep_no].pointer += length;
      xfer_data[ep_no].length += length;
    }

    USB_UNMASK_INTERRUPT(instance, USB_OTG_GINTSTS_RXFLVL);
    return;
  }

  /* Handle SOF Interrupt */
  if(status & USB_OTG_GINTSTS_SOF)
  {
    manager->Sof();
    instance->GINTSTS = USB_OTG_GINTSTS_SOF;
    return;
  }

  if (status & USB_OTG_GINTSTS_OEPINT)
  {
    OEPINTHandler();
  }

  if (status & USB_OTG_GINTSTS_IEPINT)
  {
    IEPINTHandler();
  }

  if (status & USB_OTG_GINTSTS_MMIS)
  {
    /* incorrect mode, acknowledge the interrupt */
    instance->GINTSTS = USB_OTG_GINTSTS_MMIS;
  }

  /* Handle Resume Interrupt */
  if (status & USB_OTG_GINTSTS_WKUINT)
  {
    /* Clear the Remote Wake-up Signaling */
    USBx_DEVICE(instance)->DCTL &= ~USB_OTG_DCTL_RWUSIG;

    manager->Resume();

    instance->GINTSTS = USB_OTG_GINTSTS_WKUINT;
  }

  /* Handle Suspend Interrupt */
  if (status & USB_OTG_GINTSTS_USBSUSP)
  {
    if((USBx_DEVICE(instance)->DSTS & USB_OTG_DSTS_SUSPSTS) == USB_OTG_DSTS_SUSPSTS)
      manager->Suspend();
    instance->GINTSTS = USB_OTG_GINTSTS_USBSUSP;
  }

  /* Handle Reset Interrupt */
  if (status & USB_OTG_GINTSTS_USBRST)
  {
    USBRSTHandler();
  }

  /* Handle Enumeration done Interrupt */
  if (status & USB_OTG_GINTSTS_ENUMDNE)
  {
    unsigned int temp = instance->GUSBCFG & ~USB_OTG_GUSBCFG_TRDT;
    instance->GUSBCFG = temp | (instance == USB_OTG_FS ? 6 << 10 : 9 << 10);

    manager->Reset();

    instance->GINTSTS = USB_OTG_GINTSTS_ENUMDNE;
  }

  /* Handle Incomplete ISO IN Interrupt */
  if(status & USB_OTG_GINTSTS_IISOIXFR)
  {
    //todo
    instance->GINTSTS = USB_OTG_GINTSTS_IISOIXFR;
  }

  /* Handle Incomplete ISO OUT Interrupt */
  if(status & USB_OTG_GINTSTS_PXFR_INCOMPISOOUT)
  {
    //todo
    instance->GINTSTS = USB_OTG_GINTSTS_PXFR_INCOMPISOOUT;
  }

  /* Handle Connection event Interrupt */
  if(status & USB_OTG_GINTSTS_SRQINT)
  {
    //todo
    instance->GINTSTS = USB_OTG_GINTSTS_SRQINT;
  }

  /* Handle Disconnection event Interrupt */
  if(status & USB_OTG_GINTSTS_OTGINT)
  {
    unsigned int temp = instance->GOTGINT;

    //todo

    instance->GOTGINT |= temp;
  }
}

void USB_Device_STM32F::SetAddress(unsigned short address)
{
  unsigned int temp = USBx_DEVICE(instance)->DCFG & ~USB_OTG_DCFG_DAD;
  USBx_DEVICE(instance)->DCFG = temp | ((address << 4) & USB_OTG_DCFG_DAD);
}
